<resources>
    <string name="app_name">Dice</string>
    <string name="image_view_desc">Dice Image</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="rolling_sound">Dice Roll Sound</string>
    <string name="tts">Dice Roll Voice Over </string>
    <string-array name="dice_color_array">
        <item>Dice Color: Black</item>
        <item>Dice Color: White</item>
        <item>Dice Color: Red</item>
        <item>Dice Color: Gold</item>
    </string-array>
    <string name="title_activity_about">About</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="black_dice">Black Dice</string>
    <string name="white_dice">White Dice</string>
    <string name="red_dice">Red Dice</string>
    <string name="gold_dice">Gold Dice</string>
</resources>
