<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/settings_padding"
        android:paddingEnd="@dimen/settings_padding">

        <Switch
            android:id="@+id/rolling_sound_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_margin"
            android:layout_marginBottom="@dimen/settings_margin"
            android:text="@string/rolling_sound"
            android:textSize="@dimen/settings_text_size" />

        <Switch
            android:id="@+id/tts_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/settings_margin"
            android:text="@string/tts"
            android:textSize="@dimen/settings_text_size" />

        <include
            layout="@layout/dice_thumbnails"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="privacyOnClick"
            android:text="@string/privacy_policy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
